--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,8 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [scripts]
+"list" = "invoke --list"
+"help" = "invoke --help"
 "login" = "invoke login"
 "list-files" = "invoke list-files"
 "search" = "invoke search"
